public interface PoliticaDescuento {
    double calcularDescuento(double monto);
}
